Checkpoint, start work on s3 bucket

commit e75ad721c3c9677857253585a598fbb64a84a11a
Author: Steven Edwards <winehacker@gmail.com>
Date:   Tue Jun 27 22:17:18 2023 -0700

    Expand out Go Credit Card Processor Example

commit 64f4e469ebc36b25511a901633cba6bf3ae19eed
Author: Steven Edwards <winehacker@gmail.com>
Date:   Tue Jun 27 21:35:14 2023 -0700

    Terraform Scaffolding for s3, certificates, etc

commit 121584cd245070a9555ea9e2a164d4e5532971c8
Author: Steven Edwards <winehacker@gmail.com>
Date:   Tue Jun 27 20:22:02 2023 -0700

    Document Challenge requirements

commit 56f060af519349b27ae96af88ea9edd4bcb8ae50
Author: sedwards <winehacker@gmail.com>
Date:   Tue Jun 27 19:02:21 2023 -0700

    Initial commit